<resources>
  <string name="app_name">NUMAD23Sp_ShiZeng</string>
  <string name="about_me">About Me</string>
  <string name="Info">Shi Zeng\nzeng.shi1@northeastern.edu</string>
  <string name="Clicky">Clicky Clicky</string>
  <string name="ClickyActivity">Clicky Activity</string>
  <string name="Pressed">Pressed: - </string>
  <string name="A">A</string>
  <string name="B">B</string>
  <string name="C">C</string>
  <string name="D">D</string>
  <string name="E">E</string>
  <string name="F">F</string>
  <string name="Link_Collector">Link Collector</string>
  <string name="Add_Url">Add URL</string>
  <string name="Add_Url_Hint">Please enter the link, no need https://www.</string>
  <string name="Prime_Directive">Prime Directive</string>
  <string name="Find_Primes">Find Primes</string>
  <string name="Terminate_Search">Terminate Search</string>
  <string name="CheckBox">3</string>
  <string name="WebService">Web Service</string>
  <string name="WebTransform">Start Transform</string>
  <string name="Fire_Base">FireBase</string>
  <string name="Login">Login Page</string>
  <string name="LoginBtn">Login</string>
  <string name="ResetPassword">Reset Password</string>
  <string name="Register">Register</string>
  <string name="HintEmail">Email Address</string>
  <string name="HintPassword">Password</string>
  <string name="RegisterPage">Register Page</string>
  <string name="HintName">Name</string>
  <string name="HintAge">Age</string>
  <string name="user_home_page">User Home Page</string>
  <string name="logout">Logout</string>
  <string name="reset_password">Reset Password</string>
  <string name="reset">Reset</string>
  <string name="Location">Location</string>
  <string name="Fragment">Fragment</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>