<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.RegisterPage">

    <TextView
        android:id="@+id/tv_FireLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/et_RegisterName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/HintName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/et_RegisterAge"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/HintAge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/et_RegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/HintEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/et_RegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/HintPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_RegisterPage_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <ProgressBar
        android:id="@+id/proBar_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>